transparent logo in station art
transparent logo in station art

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section class="player-side">
             <div class="player-card">
                 <div class="image-container">
-                    <img src="assets/gfmlcc.png" alt="Govinhood FM" id="station-art" class="logo-img">
+                    <img src="assets/gfmlcct.png" alt="Govinhood FM" id="station-art" class="logo-img">
                     <div class="live-badge"><b>LIVE</b></div>
                 </div>
                 <div class="timer" id="play-time">00:00:00</div>
